--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,32 +23,24 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.EC2_SSH_KEY }}" | base64 --decode > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ls -lah ~/.ssh  # Check if the key exists
-          cat ~/.ssh/id_rsa  # Debugging: print the key (Remove this after testing)
-
 
       - name: Add EC2 Host to known_hosts
         run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H ${{ secrets.EC2_HOST }} > ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
-          cat ~/.ssh/known_hosts  # Debugging: Check if the host key is stored
-
 
       - name: Deploy to EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
           cd /home/ubuntu
           rm -rf xpense_go  
-          GIT_SSH_COMMAND="ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" git clone git@github.com:rajarathinam-MurugesaPandiyan/portfolio_form.git
+          git clone git@github.com:rajarathinam-MurugesaPandiyan/xpense_go.git
           cd xpense_go
           echo "PORT=${{ secrets.PORT }}" > .env
           echo "MONGO_URL=${{ secrets.MONGO_URL }}" >> .env
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env
           go mod tidy
           go build -o app
-          sudo fuser -k 8080/tcp || true  
-          nohup ./app > output.log 2>&1 &  
+          sudo fuser -k 8080/tcp || true
+          nohup ./app > output.log 2>&1 &
           EOF
-
-
